Resize the widget boxes on mypage for correct alignment

--- a/app/assets/stylesheets/content/_my_page.sass
+++ b/app/assets/stylesheets/content/_my_page.sass
@@ -47,6 +47,8 @@
     @extend .medium-6
 
   .widget-boxes
+    // recalculate to align with the above toolbar
+    width: calc(100% + 10px)
     .widget-box
       margin-bottom: 20px
 
